# Speed-up-your-Python-with-Rust

./: .gitignore  README.md
chapter_eight/build_our_model/: .gitignore  Cargo.toml  MANIFEST.in  setup.py
chapter_eight/build_our_model/flitton_oasis_risk_modelling/: __init__.py  footprint.csv  vulnerability.csv
chapter_eight/build_our_model/src/: lib.rs
chapter_eight/build_our_model/src/footprint/: mod.rs  processes.rs  structs.rs
chapter_eight/build_our_model/src/vulnerabilities/: mod.rs  processes.rs  structs.rs
chapter_eight/testing_our_model/: testing_model.py
chapter_eleven/give_the_interface_a_native_feel_with_objects/: calculate_coordinates.py  run.py  test_flyweight.py
chapter_eleven/keep_it_simple_with_piping/: fib.rs  input.py  output.rs.py  pure_python.py
chapter_eleven/keeping-it-simple-with-rayon/: Cargo.toml
chapter_five/fib_calcs/: setup.py
chapter_five/testing/: .gitignore
chapter_four/fib_calc_package/: README.md
chapter_four/fully_automated_deployment/: LICENSE  get_latest_version.py  requirements.txt  setup.py
chapter_four/module_tests/: README.md  (+1 more)
chapter_one/: borrowing.rs  error_handling.rs  flask_app.py  print_function.rs  string_literals.rs
chapter_six/: timing_script.py
chapter_ten/fusing_rust_with_data_access/diesel_pip_package/: Cargo.toml  setup.py
chapter_ten/fusing_rust_with_data_access/diesel_pip_package/rust_db_cloning/: __init__.py
chapter_ten/fusing_rust_with_data_access/diesel_pip_package/src/: models.rs
chapter_three/: python_processes.py  python_threads.py
chatper_five/: comparison_script.py
(+127 files in other folders)
