[package]
name = "flitton_oasis_risk_modelling"
version = "0.1.0"
authors = ["Maxwell Flitton <maxwellflitton@gmail.com>"]
edition = "2018"

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }


[lib]
name = "flitton_oasis_risk_modelling"
crate-type=["rlib", "cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
